--- a/src/Blazor.Diagrams/Components/DiagramCanvas.razor
+++ b/src/Blazor.Diagrams/Components/DiagramCanvas.razor
@@ -5,9 +5,7 @@
      @onpointermove="OnPointerMove"
      @onpointerup="OnPointerUp"
      @onkeydown="OnKeyDown"
-     @onwheel="OnWheel"
-     @onpointermove:preventDefault
-     @onwheel:stopPropagation>
+     @onwheel="OnWheel">
 
     <svg class="diagram-svg-layer" style="@GetLayerStyle(BlazorDiagram.Options.LinksLayerOrder)">
 
